--- a/code/data/css/nolog.css
+++ b/code/data/css/nolog.css
@@ -1,7 +1,7 @@
 body, html {
     height: 100%;
     background-repeat: no-repeat;
-    background-image: url(../view/img/fotolia_musique.jpg);
+    background-image: url(../img/fotolia_musique.jpg);
     background-size: cover;
 }
 
@@ -15,9 +15,9 @@ body, html {
   font-size: 25px;
 }
 
-.footer {
+footer {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     background-color: #f5f5f5;
 }
