--- a/code/data/css/nolog.css
+++ b/code/data/css/nolog.css
@@ -1,8 +1,8 @@
 body, html {
-    height: 100%;
+      /*height: 100%;
     background-repeat: no-repeat;
-    background-image: url(../img/fotolia_musique.jpg);
-    background-size: cover;
+    background-image: url(../view/img/fotolia_musique.jpg);
+    background-size: cover;*/
 }
 
 #welcome-text {
@@ -20,4 +20,25 @@ footer {
     bottom: 0px;
     width: 100%;
     background-color: #f5f5f5;
+}
+
+
+.carousel-inner > .item{
+  height: 500px;
+  background-color: #727272;
+  /*background: -webkit-linear-gradient(left,#727272,#B6B6B6,#727272);*/
+  /* For Opera 11.1 to 12.0 */
+  /*background: -o-linear-gradient(left,#727272,#B6B6B6,#727272);*/
+  /* For Fx 3.6 to 15 */
+  /*background: -moz-linear-gradient(left,#727272,#B6B6B6,#727272);*/
+  /* Standard syntax */
+/*background: linear-gradient(to right, #727272,#B6B6B6,#727272);*/
+}
+.carousel{
+margin-bottom: 60px;
+}
+
+.marketing .col-lg-4 {
+    margin-bottom: 20px;
+    text-align: center;
 }
