--- a/code/data/css/signin.css
+++ b/code/data/css/signin.css
@@ -17,18 +17,12 @@ body, html {
     padding: 40px 40px;
 }
 
-.card-container.card .social {
+
+.card-container.card .social,h2,.fonction {
 text-align: center;
 }
 
-.btn {
-    font-weight: 700;
-    height: 36px;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-    cursor: default;
-}
+
 
 /*
  * Card component
@@ -69,33 +63,10 @@ text-align: center;
     min-height: 1em;
 }
 
-.reauth-email {
-    display: block;
-    color: #404040;
-    line-height: 2;
-    margin-bottom: 10px;
-    font-size: 14px;
-    text-align: center;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-.form-signin #inputPhone,
-.form-signin #inputText,
-.form-signin #inputEmail,
-.form-signin #inputPassword {
+.form-signin .form-control {
     direction: ltr;
     height: 44px;
     font-size: 16px;
-}
-
-.form-signin input[type=email],
-.form-signin input[type=password],
-.form-signin input[type=text],
-.form-signin button {
     width: 100%;
     display: block;
     margin-bottom: 10px;
@@ -106,6 +77,7 @@ text-align: center;
     box-sizing: border-box;
 }
 
+
 .form-signin .form-control:focus {
     border-color: rgb(104, 145, 162);
     outline: 0;
@@ -114,9 +86,6 @@ text-align: center;
 }
 
 .btn.btn-signin {
-    /*background-color: #4d90fe; */
-    background-color: rgb(104, 145, 162);
-    /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
     padding: 0px;
     font-weight: 700;
     font-size: 14px;
@@ -129,20 +98,4 @@ text-align: center;
     -moz-transition: all 0.218s;
     -webkit-transition: all 0.218s;
     transition: all 0.218s;
-}
-
-.btn.btn-signin:hover,
-.btn.btn-signin:active,
-.btn.btn-signin:focus {
-    background-color: rgb(12, 97, 33);
-}
-
-.forgot-password {
-    color: rgb(104, 145, 162);
-}
-
-.forgot-password:hover,
-.forgot-password:active,
-.forgot-password:focus{
-    color: rgb(12, 97, 33);
 }
