--- a/code/data/css/messages.css
+++ b/code/data/css/messages.css
@@ -2,6 +2,7 @@
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
+      border-radius: 4px;
 }
 
 tbody > tr:first-of-type > td{
