--- a/code/data/css/nolog.css
+++ b/code/data/css/nolog.css
@@ -9,9 +9,19 @@ footer {
     background-color: #f5f5f5;
 }
 
+nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+}
+
+.welcome-page {
+  padding-top: 50px;
+  height: 100%;
+}
+
 .carousel {
   height: calc(100% - 50px);
-  /*margin-bottom: 60px;*/
 }
 
 .carousel-inner {
@@ -21,17 +31,9 @@ footer {
 .carousel-inner > .item{
   height: 100%;
   background-color: #727272;
-  /**/
   background-image: url(../img/fotolia_musique.jpg);
   background-size: cover;
-  background-position: center;/**/
-  /*background: -webkit-linear-gradient(left,#727272,#B6B6B6,#727272);*/
-  /* For Opera 11.1 to 12.0 */
-  /*background: -o-linear-gradient(left,#727272,#B6B6B6,#727272);*/
-  /* For Fx 3.6 to 15 */
-  /*background: -moz-linear-gradient(left,#727272,#B6B6B6,#727272);*/
-  /* Standard syntax */
-/*background: linear-gradient(to right, #727272,#B6B6B6,#727272);*/
+  background-position: center;
 }
 
 .btn-down {
