--- a/code/data/css/main.css
+++ b/code/data/css/main.css
@@ -1,24 +1,28 @@
 #welcome {
-}
-
-.page-content {
-  margin-top: 400px;
-  padding-top: 20px;
-  background-color: #FFF;
-  z-index: 1;
-  width: 100%;
-    box-shadow: 0px -3px 3px #858585, 0px 0px 0px #FFF;
-}
-
-.carousel-inner .item {
-  height: 400px;
-}
-
-#welcome {
   z-index: -1;
   position: fixed;
   top: 50px;
   left: 0px;
   width: 100%;
   height: 400px;
+}
+
+.carousel-inner .item {
+  height: 400px;
+}
+
+.sliderPlace {
+  height: 1px;
+  margin-bottom: 399px;
+  width: 100%;
+  content: "";
+  z-index: -20;
+}
+
+.page-content {
+  padding-top: 20px;
+  background-color: #FFF;
+  z-index: 1;
+  width: 100%;
+  box-shadow: 0px -3px 3px #858585, 0px 0px 0px #FFF;
 }
