--- a/code/data/css/common.css
+++ b/code/data/css/common.css
@@ -6,18 +6,44 @@ header.page-header {
   padding: 0px;
 }
 
-header > nav {
-  height: 50px;
+header {
   position: fixed;
   width: 100%;
   z-index: 20;
 }
 
+header nav .navbar-brand {
+  padding: 0px;
+  margin-right: 5px;
+}
+
+@media (max-width: 767px) {
+  header nav .navbar-brand {
+    margin-left: 15px;
+  }
+}
+
+@media (max-width: 1500px) and (min-width: 768px) {
+  header nav .navbar-right .text {
+    display: none;
+  }
+  header nav .navbar-right a.dropdown-toggle {
+    padding-right: 0px;
+  }
+}
+
+header nav .navbar-brand img {
+  height: 50px;
+  display: inline-block;
+}
+
+.container-fluid > .navbar-collapse {
+  margin-left: 0px;
+  overflow-x: hidden;
+}
+
 .alerts {
-  padding-top: 20px;
-  width: 100%;
-  z-index: 10;
-  position: fixed;
+  margin-top: 20px;
 }
 
 .alerts .alert {
@@ -52,4 +78,8 @@ header > nav {
 
 .glyphicon {
   margin-right: 7px;
+}
+
+footer {
+  background-color: #FFF;
 }
