--- a/code/data/css/agenda.css
+++ b/code/data/css/agenda.css
@@ -33,12 +33,9 @@ table tbody td.active {
   background-color: #EEE;
 }
 
-#sanspadding .table{
+#calendarArticle .panel-body .table{
   margin-bottom: 0px;
 }
-#sanspadding {
-    padding: 0px;
-}
-#sanspadding .table tbody:last-child {
+#calendarArticle .panel-body .table tbody:last-child {
   border-bottom: 1px solid #ddd;
 }
