--- a/code/data/css/messages.css
+++ b/code/data/css/messages.css
@@ -1,8 +1,8 @@
-#list{
+table {
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-      border-radius: 4px;
+  border-radius: 4px;
 }
 
 tbody > tr:first-of-type > td{
