--- a/code/view/test.html
+++ b/code/view/test.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+<body>
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
@@ -44,3 +50,5 @@
 </div>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="../data/js/bootstrap.min.js"></script>
+</body>
+</html>
