--- a/code/data/css/agenda.css
+++ b/code/data/css/agenda.css
@@ -56,13 +56,6 @@ table tbody td.active {
 #calendarArticle .panel-body .table tbody:last-child {
   border-bottom: 1px solid #ddd;
 }
-#sanspadding{
-  padding: 0px;
-}
-
-#sanspadding table{
-  border-bottom: 1px solid #ddd;
-}
 
 #commingNext thead th {
   text-align: center;
@@ -70,4 +63,55 @@ table tbody td.active {
 
 #commingNext td.hour, td.date {
   text-align: center;
+}
+
+#dayPlan {
+  padding-bottom: 20px;
+}
+
+#dayPlan .dayPlanTableHead {
+  margin-right: 15px;
+}
+
+#dayPlan .dayPlanTableHead th:first-child {
+  width: 10%;
+}
+
+#dayPlan .dayPlanTableHead th:last-child {
+  width: 90%;
+}
+
+#dayPlan table {
+  margin-bottom: 0px;
+}
+
+#dayPlan .dayPlanTable {
+  width: 100%;
+  height: 400px;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+#dayPlan table td.text-center {
+  width: 10%;
+}
+
+#dayPlan table td.content {
+  width: 90%;
+}
+
+#dayPlan table td:hover, #dayPlan table th:hover {
+  background-color: transparent;
+}
+
+#dayPlan div.dayPlanTable td.content span.evenement {
+  margin-right: 5px;
+  padding: 3px;
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
+  background-color: #FFF;
+}
+
+#dayPlan div.dayPlanTable td.content span.evenement:hover {
+  box-shadow: 0px 0px 2px 1px #66AFE9;
 }
