Added Font Awesome + diverses modifs

--- a/code/data/css/common.css
+++ b/code/data/css/common.css
@@ -59,8 +59,12 @@ header nav .navbar-brand img {
   overflow-x: hidden;
 }
 
-header nav form.navbar-form a[aria-expanded="true"] {
-  display: none
+header nav form.navbar-form a {
+  display: none;
+}
+
+header nav form.navbar-form a.collapsed {
+  display: inline-block;
 }
 
 nav #notifs li b {
