--- a/code/data/css/main.css
+++ b/code/data/css/main.css
@@ -24,5 +24,5 @@
   background-color: #FFF;
   z-index: 1;
   width: 100%;
-  box-shadow: 0px -3px 3px #858585, 0px 0px 0px #FFF;
+  box-shadow: 0px -3px 3px rgba(70,70,70,0.7), 0px 0px 0px #FFF;
 }
