--- a/code/data/css/profile.css
+++ b/code/data/css/profile.css
@@ -20,6 +20,15 @@
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom: none;
+  height: 70px;
+}
+
+.heading .userInfo img {
+  overflow: hidden;
+}
+
+.heading .userInfo .profile-pic {
+  height: 100%;
 }
 
 .heading .userInfo .controls {
