Messagerie (Lecture de message OK) A modifier si #15 accepté

--- a/code/data/css/common.css
+++ b/code/data/css/common.css
@@ -110,10 +110,8 @@ nav #notifs .notifs-menu .notif-item .icon {
   display: inline;
 }
 
-.full {
+.full-width {
   width: 100%;
-  padding: 0px;
-  margin: 0px;
 }
 
 .glyphicon, .fa {
