--- a/code/data/css/messages.css
+++ b/code/data/css/messages.css
@@ -11,7 +11,7 @@ tbody > tr:first-of-type > td{
 }
 
 #messageList .tab-content {
-   height: 300px;
+   max-height: 300px;
    overflow: auto;
 }
 
