Documents - Upload et Déplacement Ok Erreur téléchargement des images ?!

--- a/code/data/css/documents.css
+++ b/code/data/css/documents.css
@@ -1,3 +1,14 @@
 div.panel-body.no-padding {
   padding: 0px;
 }
+
+.loader {
+   height: 2px;
+   width: 0%;
+   background-color: #29F;
+   overflow: hidden;
+}
+
+.loader.done {
+  width: 100%;
+}
