--- a/code/data/css/messages.css
+++ b/code/data/css/messages.css
@@ -11,71 +11,87 @@ tbody > tr:first-of-type > td{
 }
 
 #messageList .tab-content {
-   max-height: 300px;
-   overflow: auto;
+  max-height: 300px;
+  overflow: auto;
 }
 
 #messageList .tab-content #inbox tr.info .objet {
-   font-weight: bold;
+  font-weight: bold;
 }
 
 #messageLoading {
-   height: 2px;
-   width: 0%;
-   background-color: #29F;
-   overflow: hidden;
+  height: 2px;
+  width: 0%;
+  background-color: #29F;
+  overflow: hidden;
 }
 
 @keyframes messageLoadingStart {
-   0%    {width: 0%;}
-   100%  {width: 66%;}
+  0%    {width: 0%;}
+  100%  {width: 66%;}
 }
 
 @keyframes messageLoadingEnd {
-   0%    {width: 66%;}
-   99%  {width: 100%;}
-   100%  {width: 0%;}
+  0%    {width: 66%;}
+  99%  {width: 100%;}
+  100%  {width: 0%;}
 }
 
 @keyframes messageLoadingFail {
-   0%    {width: 66%; background-color: #29F;}
-   100%  {width: 100%; background-color: #F42;}
+  0%    {width: 66%; background-color: #29F;}
+  100%  {width: 100%; background-color: #F42;}
 }
 
 .showMessage.shown {
-   background-color: blanchedalmond;
+  background-color: blanchedalmond;
 }
 
 .showMessage.shown:hover {
-   background-color: blanchedalmond;
+  background-color: blanchedalmond;
 }
 
 .showMessage.not-shown {
-   cursor: pointer;
+  cursor: pointer;
+}
+
+.editMessage.shown {
+  background-color: blanchedalmond;
+}
+
+.editMessage.shown:hover {
+  background-color: blanchedalmond;
+}
+
+.editMessage.not-shown {
+  cursor: pointer;
 }
 
 #messageLoading.loading-start {
-   background-color: #29F;
-   animation: messageLoadingStart 3.5s ease-in;
-   width: 66%;
+  background-color: #29F;
+  animation: messageLoadingStart 3.5s ease-in;
+  width: 66%;
 }
 #messageLoading.loading-end {
-   background-color: #29F;
-   animation: messageLoadingEnd 0.5s ease-out;
-   width: 0%;
+  background-color: #29F;
+  animation: messageLoadingEnd 0.5s ease-out;
+  width: 0%;
 }
 #messageLoading.loading-fail {
-   animation: messageLoadingFail 0.5s ease-out;
-   width: 100%;
-   background-color: #F42;
+  animation: messageLoadingFail 0.5s ease-out;
+  width: 100%;
+  background-color: #F42;
 }
 
 #messageFrame #messageContent .content {
-   max-height: 400px;
-   overflow: auto;
+  max-height: 400px;
+  overflow: auto;
 }
 
 #messageFrame #messageAnswerArea {
-   resize: vertical;
-   height: 80px;
+  resize: vertical;
+  height: 80px;
+}
+
+#editFrame .message-recipient.hide-selector .selectRecipient {
+  display:none;
 }
